@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Default encoder is set to binary instead of url encoded. This means that when setting a binary body with an (by REST Assured) unrecognized content-type it will automatically be treated as an octet stream.
+* Closed input stream when getting response body as byte-array (issue 163)
 
 Change log 1.6 (2012-02-18)
 ---------------------------
